	  Sharp Memory LCD from Librae (2013-12-23).
	* configs/maple/nx and src/:  Add support for a custom Sharp Memory
	  LCD on the Maple board.  From Librae (2013-12-23).
	* configs/viewtool-stm32f107/netnsh:  Add a NSH configuration that
	  supports networking with the DP83848C module installed (2013-12-25).
	* configs/viewtool-stm32f107/src/stm32_nsh.c, stm32_mmcsd.c, stm32_usb.c,
	  and stm32_usbmsc.c:  Lay out basic framework for USB and SD card
	  support.  Code is incomplete and has been neither built nor tested
	  (2013-12-25).
	* nuttx/arch/arm/src/stm32/Kconfig, chip/stm32f103vc_pinmap.h,
	  stm32f105vb_pinmap.h, and stm32f107vc_pinmap.h:  Fix configuration and
	  pin definition that would prevent building USB for the connectivity and
	  performance lines (2013-12-25).
	* stm32l15xxx_pinmap.h: Fix a typo in USB pin definitions (2013-12-25).
	* configs/viewtools-stm32f107:  Fix building of USB for F103 and F107.
	  F103 has device only; F107 has OTG FS (2013-12-25).
	* arch/arm/src/stm32/stm32f10xxx_rcc.c and chip/stm32f10xxx_rcc.h:  Add
	  clocking support for STM32F107 USB OTG FS (which does not work)
	  (2013-12-26).
	* configs/viewtool-stm32f107:  Updates to USB for F103 and USB OTG FS
	  for F107 (2013-12-16).
	* arch/arm/src/stm32/chip/stm32f3xxxx_pinmap.h:  Fix pin definitioni names
	  for SPI2 MOSI and MISO. Noted by Brian Webb (2013-12-27).
	* graphics/nxmu, nxsu, and nxglib and libc/nx, nxmu, and nxglib:  Massive
	  reshuffling of files with (hopefully) no logic changes.   This
	  reshuffling is necessary if we ever want to build graphics applications
	  as kernel builds.  There is still more today (NXTK and NXFONTS need to
	  be moved to libc as well) (2013-12-27).
	* Move libc/nx, nxmu, and nxglib to a new library, libnx.  The NX
	  graphics is not properly a part of libc (2013-12-28).
	* Move graphics/nxfonts to libnx/nxfonts (2013-12-28).
	* Move graphics/nxtk to libnx/nxtk (2013-12-28).
