@@ -6330,4 +6330,5 @@
 	  graphics is not properly a part of libc (2013-12-28).
 	* Move graphics/nxfonts to libnx/nxfonts (2013-12-28).
 	* Move graphics/nxtk to libnx/nxtk (2013-12-28).
+	* syscalls: Need to add sem_timedwait() (2013-12-28)
 
